Subscription Matcher UI: fix alignment for text in table footers

--- a/branding/css/susemanager-mixins.less
+++ b/branding/css/susemanager-mixins.less
@@ -19,3 +19,11 @@ i.no-margin {
       margin: 0px;
     }
 }
+
+//custom setting for vertical alignment because
+//buttons for pagination on the same line have
+//.btn{'padding:6px 12px' and 'border:1px'}  --> 6px+1px=7px
+.table-page-information {
+  display: inline-block;
+  padding: 7px 0px;
+}
